force-app/main/default/objects/Field_Trip__c/Field_Trip__c.object-meta.xml
<CustomObject>
    <description>Use to store the field use</description>
    <label>Field Trip</label>
    <nameField>
        <displayFormat>FT- {00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>