force-app/main/default/objects/Field_Trip__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Store the field name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>