force-app/main/default/objects/Field_Trip__c/fields/FieldTripName__c.field-meta.xml
<CustomField>
    <fullName>FieldTripName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Trip Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>