force-app/main/default/objects/Field_Trip__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>To store the object Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>