force-app/main/default/objects/Field_Trip__c/fields/Uses__c.field-meta.xml
<CustomField>
    <fullName>Uses__c</fullName>
    <description>To store the use percentage</description>
    <label>Uses</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>