force-app/main/default/objects/Field_Trip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>Uses__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>